--- a/[IPC1]Proyecto2_201902209/Frontend/index.html
+++ b/[IPC1]Proyecto2_201902209/Frontend/index.html
@@ -52,6 +52,7 @@
                             <input class="form-control border-info" type="search" id ="Buscar" placeholder="Buscar" aria-label="Buscar">
                             <button class="btn position-absolute btn-search " onclick="Bus()" type="button"><i class="icon ion-md-search text-info"></i></button>
                         </form>
+                        <button type="button" onclick="Generar()" class="btn btn-primary">Generar Reporte</button>
                       <button type="button" onclick="cargarArchivo()" class="btn btn-primary">Cargar Canciones del archivo</button>
                       <input  class="btn btn-primary" type="file" id="file" />
                     </div>
@@ -73,6 +74,7 @@
             </section>
               <section class="bg-light py-3">
                 <div class="col-lg-12 col-md-8">
+                  <div id="tabla">
                 <table class="table table-borderless table-light">
                     <thead>
                       </thead>
@@ -80,11 +82,32 @@
                     </tbody>
                   </table>
                 </div>
+                </div>
              </section>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
   
+    <script>
+      function Generar()
+ {
+     
+    var datos = document.getElementById('tabla').innerHTML;
+    var admin = sessionStorage.usuario
+    var ventana = window.open('','','width = 800, height = 600' )
+    ventana.document.write('<html><head>');
+    ventana.document.write(`<title>Reporte generado por ${admin}</title></head> `);
+    ventana.document.write('<body>');
+     ventana.document.write('<center>');
+     ventana.document.write('CANCIONES');
+    ventana.document.write(datos);
+    ventana.document.write('</center>');
+    ventana.document.write('<body><html>');
+    ventana.document.close();
+    ventana.print();
+
+ }
+ </script>
     <script>
         function cargarArchivo(){
           $('#file').parse({
@@ -147,7 +170,7 @@
               if(val = true)
               {
                   alert("Se agregaron las canciones exitosamente")
-                        MostrarCanciones()
+                   MostrarCanciones()
               }
       }
 
